--- a/www/index.html
+++ b/www/index.html
@@ -14,13 +14,18 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
-  <body ng-app="dunow">
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-    </ion-nav-bar>
-    <ion-nav-view>
 
+  <body ng-app="dunow">
+
+    <ion-nav-bar class="bar-stable">
+
+      <ion-nav-back-button></ion-nav-back-button>
+
+    </ion-nav-bar>
+
+    <ion-nav-view>
+    <!-- content -->
     </ion-nav-view>
+
   </body>
 </html>
